--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-footer {
+/* footer {
   padding: 2rem;
   background-color: var(--light-color);
   font-size: var(--body-font-size-s);
@@ -11,4 +11,4 @@ footer .footer {
 
 footer .footer p {
   margin: 0;
-}
+} */
