Edited section so that the nav buttons are centered.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -65,7 +65,7 @@ header nav .nav-hamburger {
 }
 
 header nav .nav-hamburger button {
-  /* background-color: blue; */
+  background-color: blue;
   height: 22px;
   margin: 0;
   border: 0;
@@ -134,6 +134,7 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
 
 @media (width >= 900px) {
   header nav .nav-hamburger {
+
     /* display: none; */
 
     /* visibility: hidden; */
@@ -151,8 +152,7 @@ header .nav-brand {
   line-height: 1;
 
   /* width: 100px; */
-
-  /* background-color: aqua; */
+  background-color: aqua;
 }
 
 header nav .nav-brand img {
@@ -167,9 +167,8 @@ header nav .nav-sections {
   flex: 1 1 auto;
   display: none;
   visibility: hidden;
+  background-color: tomato;
 
-  /* background-color: tomato; */
-  
   /* background-color: var(--overlay-color); */
 }
 
