--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,8 +198,10 @@ main .section {
 
 @media (width >= 900px) {
   .section > div {
-    max-width: 1200px;
-    margin: auto;
+    /* max-width: 1200px; */
+    /* margin: auto; */
+    display: flex;
+    justify-content: center;
   }
 }
 
