--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -24,7 +24,12 @@ nav {
   position: fixed;
   top: 0;
   left: 50%;
-  padding-top: 10px;
+  padding-top: 16px;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  letter-spacing: 4px;
+  font-weight: bold;
 }
 
 .nav-links .default-content-wrapper {
