--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,3 @@
-/* header and nav layout */
 /* MOBILE */
 nav {
   background-color: #FE74E8;
@@ -12,6 +11,15 @@ nav {
   left: 0;
   right: 0;
   padding: 0 20px;
+}
+
+nav[aria-expanded="true"] {
+  background-color: #FE74E8;
+}
+
+nav[aria-expanded="false"] {
+  background-color: transparent;
+  border-bottom: none;
 }
 
 .nav-brand,
@@ -73,13 +81,13 @@ nav[aria-expanded="false"] .nav-links .default-content-wrapper ul {
 }
 
 @keyframes slideDown {
-  from { transform: translateY(-100%); }
+  from { transform: translateY(-100dvh); }
   to { transform: translateY(0); }
 }
 
 @keyframes slideUp {
   from { transform: translateY(0); }
-  to { transform: translateY(-100%); }
+  to { transform: translateY(-100dvh); }
 }
 
 li {
@@ -89,10 +97,29 @@ li {
   border-bottom: 4px solid #232323;
   display: flex;
   align-items: flex-end;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-weight: bold;
+  font-size: 28px;
 }
 
 li:hover {
   background-color: #232323;
+}
+
+li.hideMenu {
+  /* dvh is device height and this needs to be applied because in mobile (IOS) there are navigation heights that are applied to the bottom and top of the viewport that  */
+  transform: translateY(-100dvh);
+}
+
+li:hover a {
+  color: #fff !important;
+  text-decoration: none;
+}
+
+li:last-child {
+  border-bottom: none;
 }
 
 a {
@@ -100,12 +127,7 @@ a {
   padding: 20px;
   text-decoration: none;
   color: #232323 !important;
-  /* background-color: teal; */
   text-transform: uppercase;
-}
-
-li:hover a {
-  color: #fff !important; /* Change the text color on hover */
 }
 
 /* Brand */
@@ -212,11 +234,11 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
     animation: none;
   }
 
-  nav[aria-expanded="true"] .nav-links .default-content-wrapper ul li {
+  nav[aria-expanded="true"] .nav-links .default-content-wrapper ul li.animate {
     animation: slideDown 0.5s backwards;
   }
   
-  nav[aria-expanded="false"] .nav-links .default-content-wrapper ul li {
+  nav[aria-expanded="false"] .nav-links .default-content-wrapper ul li.animate {
     animation: slideUp 0.5s forwards;
   }
   
