--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -92,14 +92,12 @@ nav[aria-expanded="false"] .nav-links .default-content-wrapper ul {
 
 li {
   background-color: #E01783;
-  /* background-color: #fd2374; */
-  /* background-color: #eb57ad; */
-  /* background-color: #FE74E8; */
   color: #232323;
   flex-grow: 1;
   border-bottom: 4px solid #232323;
   display: flex;
-  align-items: flex-end;
+  flex-flow: column;
+  flex-direction: column-reverse;
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   letter-spacing: 4px;
@@ -123,6 +121,10 @@ li:hover a {
 
 li:last-child {
   border-bottom: none;
+}
+
+li .icon {
+  display: none;
 }
 
 a {
@@ -266,277 +268,26 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
   ul li:last-child {
     border-right: none;
   }
-}
 
-/* --------------------------- */
-
-/* header .nav-wrapper {
-  background-color: var(--background-color); */
-
-  /* This bkgd color is just for testing purposes */
-  
-  /* background-color: #FE74E8;  */
-  /* width: 100%;
-  z-index: 2;
-  position: fixed;
-}
-
-header nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: var(--nav-height);
-  font-family: var(--body-font-family);
-} */
-
-/* header nav[aria-expanded="true"] {
-  grid-template:
-    'hamburger brand' var(--nav-height)
-    'sections sections' 1fr
-    'tools tools' var(--nav-height) / auto 1fr;
-  overflow-y: auto;
-  min-height: 100vh;
-} */
-
-/* @media (width >= 600px) {
-  header nav {
-    padding: 0 2rem;
-  }
-}
-
-@media (width >= 900px) {
-  header nav {
-    display: flex;
-    justify-content: space-between;
+  li .icon {
+    display: inline-block; /* This may be redundant with the global styles.css styles */
+    flex-grow: 1;
+    padding: 0 50px;
   }
 
-  header nav[aria-expanded="true"] {
-    min-height: 0;
-    overflow: visible;
-  }
-}
-
-header nav p {
-  margin: 0;
-  line-height: 1;
-}
-
-header nav a:any-link {
-  color: currentcolor;
-} */
-
-
-  
-  /* background-color: var(--background-color); */
-  /* color: inherit;
-  overflow: initial;
-  text-overflow: initial;
-  white-space: initial;
-} */
-
-/* header nav .nav-hamburger-icon,
-header nav .nav-hamburger-icon::before,
-header nav .nav-hamburger-icon::after {
-  box-sizing: border-box;
-  display: block;
-  position: relative;
-  width: 20px;
-}
-
-header nav .nav-hamburger-icon::before,
-header nav .nav-hamburger-icon::after {
-  content: '';
-  position: absolute;
-  background: currentcolor;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon,
-header nav[aria-expanded="false"] .nav-hamburger-icon::before,
-header nav[aria-expanded="false"] .nav-hamburger-icon::after {
-  height: 2px;
-  border-radius: 2px;
-  background: currentcolor;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon::before {
-  top: -6px;
-}
-
-header nav[aria-expanded="false"] .nav-hamburger-icon::after {
-  top: 6px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon {
-  height: 22px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon::before,
-header nav[aria-expanded="true"] .nav-hamburger-icon::after {
-  top: 3px;
-  left: 1px;
-  transform: rotate(45deg);
-  transform-origin: 2px 1px;
-  width: 24px;
-  height: 2px;
-  border-radius: 2px;
-}
-
-header nav[aria-expanded="true"] .nav-hamburger-icon::after {
-  top: unset;
-  bottom: 3px;
-  transform: rotate(-45deg);
-} */
-
-/* @media (width >= 900px) {
-  header nav .nav-hamburger { */
-
-    /* display: none; */
-
-    /* visibility: hidden; */
-  /* }
-} */
-
-/* brand */
-
-/* header .nav-brand {
-  grid-area: brand; */
-
-  /* flex-basis: 128px; */
-  /* font-size: var(--heading-font-size-s);
-  font-weight: 700;
-  line-height: 1; */
-
-  /* width: 100px; */
-  /* background-color: aqua;
-}
-
-header nav .nav-brand img {
-  width: 75px;
-  height: auto;
-} */
-
-/* sections */
-
-/* header nav .nav-sections {
-  grid-area: sections;
-  flex: 1 1 auto;
-  display: none;
-  visibility: hidden;
-  background-color: tomato; */
-
-  /* background-color: var(--overlay-color); */
-/* } */
-
-/* header nav[aria-expanded="true"] .nav-sections {
-  display: block;
-  visibility: visible;
-  align-self: start;
-}
-
-header nav .nav-sections ul  {
-  list-style: none;
-  padding-left: 0;
-  font-size: var(--body-font-size-s);
-  font-weight: 500;
-}
-
-header nav .nav-sections ul > li {
-  font-weight: 700;
-}
-
-header nav .nav-sections ul > li > ul {
-  margin-top: 0;
-}
-
-header nav .nav-sections ul > li > ul > li {
-  font-weight: 500;
-}
-
-@media (width >= 900px) {
-  header nav .nav-sections {
-    display: block;
-    visibility: visible;
-    white-space: nowrap;
+  li .icon:hover {
+    animation: moveUpDown 1s infinite alternate;
   }
 
-  header nav[aria-expanded="true"] .nav-sections {
-    align-self: unset;
+  @keyframes moveUpDown {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-5px);
+    }
+    100% {
+      transform: translateY(0);
+    }
   }
-
-  header nav .nav-sections .nav-drop {
-    position: relative;
-    padding-right: 16px;
-    cursor: pointer;
-  }
-
-  header nav .nav-sections .nav-drop::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: .5em;
-    right: 2px;
-    transform: rotate(135deg);
-    width: 6px;
-    height: 6px;
-    border: 2px solid currentcolor;
-    border-radius: 0 1px 0 0;
-    border-width: 2px 2px 0 0;
-  }
-
-  header nav .nav-sections .nav-drop[aria-expanded="true"]::after {
-    top: unset;
-    bottom: .5em;
-    transform: rotate(315deg);
-  }
-
-  header nav .nav-sections ul {
-    display: flex;
-    gap: 2em;
-    margin: 0;
-    font-size: var(--body-font-size-xs);
-  }
-
-  header nav .nav-sections .default-content-wrapper > ul > li {
-    flex: 0 1 auto;
-    position: relative;
-    font-weight: 500;
-  }
-
-  header nav .nav-sections .default-content-wrapper > ul > li > ul {
-    display: none;
-    position: relative;
-  }
-
-  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded="true"] > ul {
-    display: block;
-    position: absolute;
-    left: -1em;
-    width: 200px;
-    margin-top: 12px;
-    padding: 1em;
-    background-color: var(--light-color);
-    white-space: initial;
-  }
-
-  header nav .nav-sections .default-content-wrapper > ul > li > ul::before {
-    content: '';
-    position: absolute;
-    top: -8px;
-    left: 8px;
-    width: 0;
-    height: 0;
-    border-left: 8px solid transparent;
-    border-right: 8px solid transparent;
-    border-bottom: 8px solid var(--light-color);
-  }
-
-  header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
-    padding: 8px 0;
-  }
-} */
-
-/* tools */
-
-/* header nav .nav-tools {
-  grid-area: tools;
-} */
+}
