--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -18,7 +18,7 @@ nav[aria-expanded="true"] {
 }
 
 nav[aria-expanded="false"] {
-  background-color: #fffcfb;
+  background-color: var(--background-color);
   border-bottom: none;
 }
 
