--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -31,14 +31,9 @@ nav[aria-expanded="false"] {
 
 .nav-breadcrumb {
   position: fixed;
-  top: 0;
-  left: 40%;
-  padding-top: 16px;
-  font-family: Montserrat, sans-serif;
-  text-transform: uppercase;
-  font-size: 14px;
-  letter-spacing: 4px;
-  font-weight: bold;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 12px;
 }
 
 .nav-links .default-content-wrapper {
@@ -231,10 +226,6 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
   
   .nav-links .default-content-wrapper {
     top: 0;
-  }
-
-  .nav-breadcrumb {
-    left: 50%;
   }
 
   nav[aria-expanded="true"] {
