Added new font and fixed breadcrumb to display in poppins font instead of my custom font.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -30,6 +30,8 @@ header .nav-hamburger {
 
 header .nav-breadcrumb {
   position: fixed;
+  /* font-family: poppins, sans-serif; */
+  font-size: 16px;
   left: 50%;
   transform: translateX(-50%);
   width: 100px
