--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,7 +53,7 @@
 }
 
 body {
-  font-size: var(--body-font-size-m);
+  font-size: var(--body-font-size-s);
   margin: 0;
   font-family: var(--body-font-family);
   line-height: 1.6;
@@ -75,8 +75,8 @@ h4, h5, h6 {
   font-family: var(--heading-font-family);
   font-weight: 600;
   line-height: 1.25;
-  margin-top: 1em;
-  margin-bottom: .5em;
+  margin-top: .5em;
+  margin-bottom: .2em;
   scroll-margin: calc(var(--nav-height) + 1em);
 }
 
@@ -187,12 +187,8 @@ main .section {
   }
 }
 
-@media (width >= 900px) {
-  .section > div {
-    display: flex;
-    justify-content: center;
-  }
-}
+/* @media (width >= 900px) {
+} */
 
 /* section metadata */
 main .section.light,
