--- a/blocks/slider/slider.css
+++ b/blocks/slider/slider.css
@@ -1,4 +1,3 @@
-/* MOBLIE */
 .slider {
     margin-bottom: 100px;
 }
@@ -12,7 +11,9 @@
 
 .slider li {
     display: inline-block;
+    vertical-align: middle;
     padding-right: 20px;
+    height: auto;
 }
 
 .slider li img {
