--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@
   /* colors */
   --link-color: #F497CA;
   --link-hover-color: #F497CA;
+  --primary-color: #F497CA;
   --background-color: #FFFCFB;
   --light-color: #eee;
   --dark-color: #ccc;
@@ -28,6 +29,7 @@
   --body-font-size-m: 22px;
   --body-font-size-s: 18px;
   --body-font-size-xs: 16px;
+  --body-font-size-xxs: 12px;
 
   /* heading sizes */
   --heading-font-size-xxl: 48px;
@@ -186,9 +188,6 @@ main .section {
     padding: 0 32px;
   }
 }
-
-/* @media (width >= 900px) {
-} */
 
 /* section metadata */
 main .section.light,
